feat: 实现知识库筛选与刷新功能（前后端全链路）